src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>CSR - Choice</fullName>
        <description>Consumer Service Representative Support for Choice Pillar</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed - No Response</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>Follow Up Needed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>New Reply</fullName>
        </values>
        <values>
            <fullName>Pending Client Team</fullName>
        </values>
        <values>
            <fullName>Pending ERT %28Assigned%29</fullName>
        </values>
        <values>
            <fullName>Pending ERT %28New%29</fullName>
        </values>
        <values>
            <fullName>Pending Eng%2FDev</fullName>
        </values>
        <values>
            <fullName>Pending User</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CSR - Connect</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed - No Response</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>Follow Up Needed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>New Reply</fullName>
        </values>
        <values>
            <fullName>Pending Client Team</fullName>
        </values>
        <values>
            <fullName>Pending ERT %28Assigned%29</fullName>
        </values>
        <values>
            <fullName>Pending ERT %28New%29</fullName>
        </values>
        <values>
            <fullName>Pending Eng%2FDev</fullName>
        </values>
        <values>
            <fullName>Pending User</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CSR - Engage</fullName>
        <description>Consumer Service Representative Support for Engage Pillar</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed - No Response</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>Follow Up Needed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>New Optum</fullName>
        </values>
        <values>
            <fullName>New Reply</fullName>
        </values>
        <values>
            <fullName>Optum Replied</fullName>
        </values>
        <values>
            <fullName>Pending Client Team</fullName>
        </values>
        <values>
            <fullName>Pending ERT %28Assigned%29</fullName>
        </values>
        <values>
            <fullName>Pending ERT %28New%29</fullName>
        </values>
        <values>
            <fullName>Pending Eng%2FDev</fullName>
        </values>
        <values>
            <fullName>Pending Optum</fullName>
        </values>
        <values>
            <fullName>Pending User</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CSR - Tier 2</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Optum Replied</fullName>
        </values>
        <values>
            <fullName>Pending Client Team</fullName>
        </values>
        <values>
            <fullName>Pending Eng%2FDev</fullName>
        </values>
        <values>
            <fullName>Pending Optum</fullName>
        </values>
        <values>
            <fullName>Pending User</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Client Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed - No Response</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>Follow Up Needed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>New Reply</fullName>
        </values>
        <values>
            <fullName>Pending Client Team</fullName>
        </values>
        <values>
            <fullName>Pending ERT %28Assigned%29</fullName>
        </values>
        <values>
            <fullName>Pending Eng%2FDev</fullName>
        </values>
        <values>
            <fullName>Pending Optum</fullName>
        </values>
        <values>
            <fullName>Pending User</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Internal Rewards</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Delivered - Lost%2FStolen</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Incorrect Item</fullName>
        </values>
        <values>
            <fullName>Lost by Shipper%2FDamaged in Transit</fullName>
        </values>
        <values>
            <fullName>Shipped</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Name_Formula__c</fullName>
        <formula>IF( 

AND(
Record_Type_Name__c = &apos;Client Support&apos;,
NOT(ISBLANK(AccountId))), Account.Name, Contact.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Taken_to_Resolve__c</fullName>
        <label>Action Taken to Resolve</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <picklist>
            <picklistValues>
                <fullName>HIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From Rally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot reproduce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New problem / No JIRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing problem / JIRA updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provided instructions to report biometric screenings/claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provided syncing instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provided registration instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provided Touch ID instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affiliation_Bucket_2__c</fullName>
        <formula>IF( 
OR(
CONTAINS(Account.Name , &apos;JPMC&apos;),
CONTAINS(Affiliation__c, &apos;jpmorgan&apos;),
AND(
NOT(ISBLANK(ContactId)),
OR(
CONTAINS(Contact.Account.Name , &apos;JPMC&apos;),
CONTAINS(Contact.Affiliation__c, &apos;jpmorgan&apos;))),
AND(
NOT(ISBLANK(ContactId)),
CONTAINS(Contact.Email, &apos;@chase.com&apos;))), &apos;JP Morgan&apos;,

IF(
OR(
CONTAINS(Account.Name , &apos;Target&apos;),
CONTAINS(Affiliation__c, &apos;target&apos;),
AND(
NOT(ISBLANK(ContactId)),
OR(
CONTAINS(Contact.Account.Name , &apos;Target&apos;),
CONTAINS(Contact.Affiliation__c, &apos;target&apos;))),
AND(
NOT(ISBLANK(ContactId)),
CONTAINS(Contact.Email, &apos;@target.com&apos;))), &apos;Target&apos;,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliation Bucket 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Bucket__c</fullName>
        <formula>IF(
AND(
NOT(ISNULL(AccountId)), 
NOT(ISNULL(Account.RecordTypeId)),
Account.RecordType.Name != &apos;Consumer Support&apos;), Account.Name,

IF(

OR(
CONTAINS(Affiliation__c, &apos;dpsg&apos;),
AND(
NOT(ISNULL(ContactId)),
OR(
CONTAINS(Contact.Affiliation__c, &apos;dpsg&apos;),
CONTAINS(Contact.Email, &apos;@dpsg&apos;)))), &apos;Dr Pepper Snapple Group&apos;,

IF(

OR(
CONTAINS(Affiliation__c, &apos;nextera&apos;),
CONTAINS(Contact.Affiliation__c, &apos;nextera&apos;),
CONTAINS(Contact.Email, &apos;@nextera&apos;)), &apos;NextEra Energy&apos;,

IF(

OR(
CONTAINS(Affiliation__c, &apos;norfolksouthern&apos;),
CONTAINS(Contact.Affiliation__c, &apos;norfolksouthern&apos;),
CONTAINS(Contact.Email, &apos;norfolksouthern&apos;)), &apos;Norfolk Southern&apos;,

IF(

OR(
CONTAINS(Affiliation__c, &apos;columbia&apos;),
CONTAINS(Contact.Affiliation__c, &apos;columbia&apos;),
CONTAINS(Company__c, &apos;Columbia University&apos;)), &apos;Columbia University&apos;,

IF(

OR(
CONTAINS(Affiliation__c, &apos;anadarko&apos;),
CONTAINS(Contact.Affiliation__c, &apos;anadarko&apos;),
CONTAINS(Company__c, &apos;Anadarko&apos;),
CONTAINS(Contact.Email, &apos;@anadarko.com&apos;)), &apos;Anadarko Petroleum Corporation&apos;,

IF(

OR(
CONTAINS(Affiliation__c, &apos;optum_360&apos;),
CONTAINS(Contact.Affiliation__c, &apos;optum_360&apos;)), &apos;Optum360 LLC&apos;,

IF(

OR(
CONTAINS(Affiliation__c, &apos;target&apos;),
CONTAINS(Contact.Affiliation__c, &apos;target&apos;),
CONTAINS(Contact.Email, &apos;@target.com&apos;)), &apos;Target&apos;,

IF(

OR(
CONTAINS(Affiliation__c, &apos;simply_engaged&apos;),
CONTAINS(Contact.Affiliation__c, &apos;simply_engaged&apos;)), &apos;Simply Engaged&apos;,

IF(

OR(
CONTAINS(Affiliation__c, &apos;erie&apos;),
CONTAINS(Contact.Affiliation__c, &apos;erie&apos;),
CONTAINS(Contact.Email, &apos;@erie.com&apos;)), &apos;Erie&apos;,

IF(

OR(
CONTAINS(Affiliation__c, &apos;kbr&apos;),
CONTAINS(Contact.Affiliation__c, &apos;kbr&apos;),
CONTAINS(Contact.Email, &apos;@kbr&apos;)), &apos;KBR&apos;,


IF(

OR(
CONTAINS(Affiliation__c, &apos;citgo&apos;),
CONTAINS(Contact.Affiliation__c, &apos;citgo&apos;),
CONTAINS(Contact.Email, &apos;citgo&apos;)), &apos;Citgo&apos;,

IF(

OR(
CONTAINS(Affiliation__c, &apos;ymca&apos;),
CONTAINS(Contact.Affiliation__c, &apos;ymca&apos;),
CONTAINS(Contact.Email, &apos;ymca&apos;)), &apos;YMCA&apos;,

IF(

OR(
CONTAINS(Affiliation__c, &apos;corning&apos;),
CONTAINS(Contact.Affiliation__c, &apos;corning&apos;),
CONTAINS(Contact.Email, &apos;@corning.com&apos;)), &apos;Corning&apos;,

IF(

OR(
CONTAINS(Affiliation__c, &apos;jpmc&apos;),
CONTAINS(Contact.Affiliation__c, &apos;jpmc&apos;),
CONTAINS(Contact.Email, &apos;@jpmc.com&apos;)), &apos;JPMC&apos;,

IF(

OR(
CONTAINS(Affiliation__c, &apos;optum&apos;),
CONTAINS(Contact.Affiliation__c, &apos;optum&apos;),
CONTAINS(Contact.Email, &apos;@optum.com&apos;)), &apos;Optum&apos;,

IF(

OR(
CONTAINS(Affiliation__c, &apos;uhg&apos;),
CONTAINS(Contact.Affiliation__c, &apos;uhg&apos;),
CONTAINS(Contact.Email, &apos;@uhg.com&apos;)), &apos;UHG&apos;,

IF(

NOT(ISNULL(Partner_Lookup__c)), Partner_Lookup__r.Name, 

IF(

NOT(ISBLANK(TEXT(Contact.Partner__c))),TEXT(Contact.Partner__c), &apos;Other&apos;)))))))))))))))))))</formula>
        <label>Affiliation Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Formula__c</fullName>
        <formula>IF( 

ISBLANK(Contact.Affiliation__c), Affiliation__c, Contact.Affiliation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Duration__c</fullName>
        <label>Agent Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <label>Agent ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Username__c</fullName>
        <label>Agent Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alex_Update__c</fullName>
        <label>Alex Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Duration__c</fullName>
        <label>All Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choice Admin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attachments__c</fullName>
        <label>Attachments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authenticated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authenticated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Browser_Type__c</fullName>
        <label>Browser Type</label>
        <picklist>
            <picklistValues>
                <fullName>Firefox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE (Unknown version)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not relevant to call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Duration__c</fullName>
        <label>Call Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ID of Call Record from External System.</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of Call Record from External System.</inlineHelpText>
        <label>Call ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Call_Recording_URL__c</fullName>
        <label>Call Recording URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Call_Start_Time__c</fullName>
        <label>Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <picklist>
            <controllingField>Origin</controllingField>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Age_In_Business_Hours1__c</fullName>
        <formula>IF(

((Time_with_Client_Team__c +  Time_With_Customer__c +  Time_with_Eng_Dev__c +  Time_with_Optum__c +  Time_With_Support__c +  Time_With_Tier_1__c + Time_With_Tier_2__c)/3600) &gt; 0, (Time_with_Client_Team__c +  Time_With_Customer__c +  Time_with_Eng_Dev__c +  Time_with_Optum__c +  Time_With_Support__c +  Time_With_Tier_1__c + Time_With_Tier_2__c)/3600, 

IF( 

IsClosed = true, (ClosedDate - CreatedDate)*24, (NOW() - CreatedDate)*24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age In Business Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age_In_Business_Hours__c</fullName>
        <description>The total case age in business hours from open to close.</description>
        <inlineHelpText>The total case age in business hours from open to close.</inlineHelpText>
        <label>Case Age In Business Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age_Offset__c</fullName>
        <formula>IF( 

IsClosed = true, 

IF(

(ClosedDate - CreatedDate)*24 &lt;=120, (ClosedDate - CreatedDate)*24,0), 

IF(

(NOW() - CreatedDate)*24 &lt;=120, (NOW() - CreatedDate)*24, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <formula>IF(

IsClosed = true, (ClosedDate - CreatedDate)*24,  (NOW() - CreatedDate)*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age_in_Days__c</fullName>
        <label>Case Age in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>Optum Portal Support case number</description>
        <label>Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Open_Formula__c</fullName>
        <formula>IF(

ISBLANK(Number_of_Case_Opens__c), 1, Number_of_Case_Opens__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Open Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp; &quot; &quot; &amp; Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <description>Optum Case Owner</description>
        <label>Case Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category_Step_1__c</fullName>
        <formula>IF(
AND(
DATEVALUE(CreatedDate) &gt;= DATE(2016,02,10),
NOT(ISBLANK(Step_1__c)),
Step_1__c != &apos;-Select-&apos;), Step_1__c,

IF(

OR(
DATEVALUE(CreatedDate) &lt; DATE(2016,02,10),
RecordType.Name = &apos;Choice&apos;,
RecordType.Name = &apos;Client Support&apos;,
RecordType.Name = &apos;Connect&apos;), TEXT(Issue_Bug__c), &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category - Step 1 Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Step_2__c</fullName>
        <formula>IF(
AND(
DATEVALUE(CreatedDate) &gt;= DATE(2016,02,10),
NOT(ISBLANK(Step_2__c)),
Step_1__c != &apos;-Select-&apos;), Step_2__c,

IF(

OR(
DATEVALUE(CreatedDate) &lt; DATE(2016,02,10),
RecordType.Name = &apos;Choice&apos;,
RecordType.Name = &apos;Connect&apos;,
RecordType.Name = &apos;Client Support&apos;), TEXT(Inquiry_Type__c), &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category - Step 2 Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Step_3__c</fullName>
        <formula>IF(
AND(
DATEVALUE(CreatedDate) &gt;= DATE(2016,02,10),
NOT(ISBLANK(Step_3__c)),
Step_3__c != &apos;-Select-&apos;), Step_3__c,

IF(

AND(
DATEVALUE(CreatedDate) &gt;= DATE(2016,02,10),
OR(
ISBLANK(Step_3__c)),
Step_3__c = &apos;-Select-&apos;), &apos;&apos;,
TEXT(Issue_Bug_Sub_Category__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category - Step 3 Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>Sales_Channel__c</referenceTo>
        <relationshipLabel>Support Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chat_Key__c</fullName>
        <label>Chat Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Choice_Count__c</fullName>
        <formula>IF(

RecordType.DeveloperName = &apos;Choice&apos;, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Choice Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_External_String__c</fullName>
        <formula>Account.External_Client_String__c</formula>
        <label>Client External String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Phase__c</fullName>
        <label>Client Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UHC Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-OE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClosedDateGMT__c</fullName>
        <formula>IF(

IsClosed = true, DATEVALUE(LEFT(TEXT(LastModifiedDate),10)),DATEVALUE(LEFT(TEXT(NOW()),10)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClosedDateGMT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Optum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Used on CSR Create Page to hold Comments in transit to Case Comment object - needed due to fieldset use.</description>
        <inlineHelpText>Used on CSR Create Page to hold Comments in transit to Case Comment object - needed due to fieldset use.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connect_First_ID__c</fullName>
        <externalId>true</externalId>
        <label>Connect First ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Case__c</fullName>
        <formula>IF(
OR(

RecordType.Name = &apos;Tier 2&apos;,
RecordType.Name = &apos;Engage&apos;,
RecordType.Name = &apos;Choice&apos;), true, false)</formula>
        <label>Consumer Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Flagged_for_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will populate if the Contact associated with the case is flagged for review.</description>
        <label>Contact Flagged for Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact.FirstName + &apos; &apos; + Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Partner__c</fullName>
        <formula>Contact.Partner_lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_formula__c</fullName>
        <formula>Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDateGMT__c</fullName>
        <formula>DATEVALUE(LEFT(TEXT(CreatedDate),10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDateGMT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <label>Customer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Date_Experienced__c</fullName>
        <label>Date Experienced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth2__c</fullName>
        <formula>IF(

NOT(ISBLANK(Contact.Date_of_Birth__c)), Contact.Date_of_Birth__c, Date_of_Birth__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth_Formula__c</fullName>
        <formula>IF(

NOT(ISBLANK(Contact.Date_of_Birth__c)), Contact.Date_of_Birth__c, Date_of_Birth__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dequeue_Time_Offset__c</fullName>
        <formula>IF(

NOT(ISBLANK(Dequeue_Time__c)), Dequeue_Time__c + (420/1440),null)</formula>
        <label>Dequeue Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dequeue_Time__c</fullName>
        <label>Dequeue Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ERT_Tag__c</fullName>
        <label>ERT Tag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effort_Formula__c</fullName>
        <formula>IF(
Effort_Response_Score__c  = &apos;Strongly Disagree&apos;, 1, 

IF(
Effort_Response_Score__c = &apos;Slightly Disagree&apos;, 2,

IF(
Effort_Response_Score__c = &apos;Disagree&apos;, 3,

IF(
Effort_Response_Score__c = &apos;Neither Disagree or Agree&apos;, 4,

IF(
Effort_Response_Score__c = &apos;Somewhat Agree&apos;, 5,

IF(
Effort_Response_Score__c = &apos;Agree&apos;, 6,

If(
Effort_Response_Score__c = &apos;Strongly Agree&apos;, 7, 0)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effort Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effort_Response_Score__c</fullName>
        <label>Effort Response Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Formula__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_ID_Policy_Number__c</fullName>
        <label>Employee ID/Policy Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Rewards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Step 1 Reporting = Employer Rewards - used for reporting purposes.</description>
        <label>Employer Rewards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engage_Count__c</fullName>
        <formula>IF(

RecordType.DeveloperName = &apos;Engage&apos;, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engage Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <picklist>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Escalation_Comments__c</fullName>
        <label>Escalation Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FCR_Formula__c</fullName>
        <formula>IF(

AND(
First_Call_Resolution__c = true,
ISPICKVAL(Origin,&apos;Phone&apos;)), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCR Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filtered_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filtered Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Name</field>
                <operation>equals</operation>
                <value>Alex Test</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Filtered_Email_Term__c</fullName>
        <label>Filtered Email Term</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filtered_Subject_Term__c</fullName>
        <label>Filtered Subject Term</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Call_Resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Call Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Contact_Resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Contact Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name_Formula__c</fullName>
        <formula>IF(
NOT(ISBLANK(ContactId)), Contact.FirstName, First_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Time_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Time Contact</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>